# fastapi_vue

./: .env  .env_example  .gitignore  README.md  cep.py  main.py  pyproject.toml  requirements.txt  routers.py  vercel.json
.devcontainer/: Dockerfile  devcontainer.json
app/: main.py  routers.py  schema.py
app/api/: routers.py
app/api/controllers/: cadastro_constroller.py
app/api/utils/: http_status.py
app/entities/dtos/: cadastro_create.py  cadastro_response.py  cadastro_update.py
app/infra/mongo/: config.py
app/infra/repositories/: cadastro_repositorie.py
app/infra/schemas/: cadastro.py
app/use_cases/: cep.py
frontend/: env.d.ts  package-lock.json  vite.config.ts
frontend/src/: App.vue
frontend/src/components/: HelloWorld.vue
