[tool.poetry]
name = "basic-fast-api"
version = "0.1.0"
description = ""
authors = ["Renan_Torres"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
requests = "^2.31.0"
aiohttp = "^3.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
